<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:background="@drawable/campfire1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txtEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_gear_here"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            />


        <EditText
            android:id="@+id/editItem"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/item_name"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/quantity"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editComment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/comment"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_gear"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:background="@color/white"/>


        <Button
            android:id="@+id/btnTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_items"
            android:textStyle="bold"
            android:background="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_list"
            android:textSize="18sp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>


        <!-- Clear Button -->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clear_data"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/white"
            android:layout_marginBottom="15dp"/>

        <!-- Exit Button -->
        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@color/black"
            android:layout_marginBottom="15dp" />


        <TextView
        android:id="@+id/txtTotalItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>


    </LinearLayout>

</ScrollView>