<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/campfire1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campsite_commander"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:text="@string/thandeka_zengele_st10505979" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:background="@color/white"
        android:text="@string/start" />

    <Button
        android:id="@+id/btnExitSplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/black"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/exit" />
</LinearLayout>